--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   "main": "./server/index",
   "dependencies": {
     "axios": "^0.16.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "express-session": "^1.15.5",
     "massive": "^3.1.0",
-    "passport": "^0.3.2",
-    "passport-auth0": "^0.6.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
